deploy/jupyter/ingress-jupyterhub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jupyter
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: jupyterhub-tls
      hosts:
        - jupyter.group-jsti.dski23a.timebertt.dev
  rules:
    - host: jupyter.group-jsti.dski23a.timebertt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
